# extract_yf_api

./: pyproject.toml
api_info/: pyproject.toml
api_info/docs/: finviz_filters.json
api_info/finviz_categories/: extraxt.py
api_info/from_json/: data_base.py  load.py  main.py
api_info/src/: need_keys.py  yfinance_check.ipynb
